fix contrast

--- a/chamber/css/medium.css
+++ b/chamber/css/medium.css
@@ -15,7 +15,7 @@
         position: absolute;
         font-family: 'Roboto', sans-serif;
         color: #FFFFFF;
-        font-size: 2.5em;
+        font-size: 3em;
         text-shadow: 1px 1px 2px black, 0 0 1em #044B87, 0 0 0.2em #044B87;
     }
 
